@@ -25,57 +25,9 @@ class UserServiceTest {
     }
 
     @Test
-    @DisplayName("Register and Get User")
-    void registerAndGetUser() {
-        userService.register("john_doe", "john@example.com", "secret123");
-
-        List<User> users = userService.listUsers(null);
-        assertThat(users).hasSize(1);
-
-        User user = users.get(0);
-        assertThat(user.getUsername()).isEqualTo("john_doe");
-        assertThat(user.getIsActive()).isTrue();
-        assertThat(userService.getUser(user.getId())).isNotNull();
-    }
-
-    @Test
-    @DisplayName("Search Users")
-    void listUsersSearch() {
-        userService.register("alice", "alice@mail.com", "pass");
-        userService.register("bob", "bob@mail.com", "pass");
-
-        List<User> result = userService.listUsers("alice");
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getUsername()).isEqualTo("alice");
-    }
-
-    @Test
-    @DisplayName("Update Profile")
-    void updateProfile() {
-        userService.register("temp", "temp@mail.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
-
-        userService.updateProfile(userId, "new_name", "new@mail.com");
-
-        User updated = userService.getUser(userId);
-        assertThat(updated.getUsername()).isEqualTo("new_name");
-        assertThat(updated.getEmail()).isEqualTo("new@mail.com");
-    }
-
-    @Test
-    @DisplayName("Deactivate User")
-    void deactivateUser() {
-        userService.register("active_user", "email", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
-
-        userService.deactivateUser(userId);
-        assertThat(userService.getUser(userId).getIsActive()).isFalse();
-    }
-
-    @Test
     @DisplayName("Assign Role")
     void assignRole() {
-        boolean result = userService.assignRole(1, 100);
+        boolean result = userService.assignRole(1L, 100L);
         assertThat(result).isTrue();
     }
 
@@ -88,7 +40,7 @@ class UserServiceTest {
         List<User> users = userService.listUsers(null);
         assertThat(users).hasSize(1);
 
-        User user = users.get(0);
+        User user = users.getFirst();
         assertThat(user.getUsername()).isEqualTo("john_doe");
         assertThat(user.getIsActive()).isTrue();
 
@@ -116,7 +68,7 @@ class UserServiceTest {
 
         List<User> result = userService.listUsers("alice");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getUsername()).isEqualTo("alice");
+        assertThat(result.getFirst().getUsername()).isEqualTo("alice");
 
         assertThat(userService.listUsers("zorro")).isEmpty();
     }
@@ -125,7 +77,7 @@ class UserServiceTest {
     @DisplayName("Update Profile")
     void updateProfile() {
         userService.register("temp", "temp@mail.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
+        Long userId = userService.listUsers(null).getFirst().getId();
 
         userService.updateProfile(userId, "new_name", "new@mail.com");
 
@@ -138,7 +90,7 @@ class UserServiceTest {
     @DisplayName("Deactivate User")
     void deactivateUser() {
         userService.register("active_user", "email@test.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
+        Long userId = userService.listUsers(null).getFirst().getId();
 
         boolean isDeactivated = userService.deactivateUser(userId);
 
@@ -150,8 +102,8 @@ class UserServiceTest {
     @DisplayName("Roles Logic: Assign and Remove")
     void rolesLogic() {
         userService.register("role_user", "role@test.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
-        Integer roleId = 100;
+        Long userId = userService.listUsers(null).getFirst().getId();
+        Long roleId = 100L;
 
         boolean assigned = userService.assignRole(userId, roleId);
         assertThat(assigned).isTrue();
